athena-test.com/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-secret: "default/cloudflare-ca"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
  name: athena-test.com
spec:
  ingressClassName: nginx
  rules:
    - host: athena-test.com
      http:
        paths:
          - backend:
              service:
                name: athena-test-com
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - athena-test.com
      secretName: athena-test-com-tls
